--- a/home/index.html
+++ b/home/index.html
@@ -244,9 +244,9 @@ createCanvas(400, 400);
 </code></pre>
 			</md>
 			<md id="md10-1">
-				<h2 id="melodic-🔊">Melodic 🔊</h2>
+				<h2 id="sonic-🔊">Sonic 🔊</h2>
 				<p><a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> is a great library but
-					most use cases don't need it's extensive sound generation and filtering features. 🎛️</p>
+					most use cases don't need its extensive sound generation and filtering features. 🎛️</p>
 				<p>That's why q5.js comes bundled with <a href="/src/q5-sound.js" target="_blank">q5-sound</a>, which enables
 					sound loading, playback, and basic mixing. 🎚️</p>
 			</md>
