--- a/home/index.html
+++ b/home/index.html
@@ -7,6 +7,13 @@
 	<title>q5</title>
 	<link rel="icon" href="/q5js_logo.webp">
 	<link rel="stylesheet" href="index.css">
+	<meta name="description" content="q5.js is the sequel to p5.js that's smaller and faster!">
+
+	<meta property="og:title" content="q5js">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://q5js.org">
+	<meta property="og:image" content="q5js_logo.webp">
+	<meta property="og:description" content="q5.js is the sequel to p5.js that's smaller and faster!">
 </head>
 
 <body class="dark">
