--- a/home/index.html
+++ b/home/index.html
@@ -291,10 +291,11 @@ createCanvas(400, 400);
 			<p>Start coding with the <a href="https://aijs.io/editor?user=AIJS&amp;project=q5.js-Template"
 					target="_blank">q5.js template</a> for the <a href="https://aijs.io" target="_blank">Aijs</a> online code
 				editor. 🖌️</p>
-			<p>q5 is also available on <a href="https://www.npmjs.com/package/q5" target="_blank">npm</a> and <a
-					href="https://gitub.com/q5js/q5.js" target="_blank">GitHub</a>.</p>
+			<p>Full documentation is coming soon, for now see q5's <a href="https://github.com/q5js/q5.js"
+					target="_blank">GitHub README</a>.</p>
 			<pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
 </code></pre>
+			<p>q5 is also available on <a href="https://www.npmjs.com/package/q5" target="_blank">npm</a>. 📦</p>
 		</md>
 		<md id="md11-1">
 			<h2 id="join-our-community-🤝">Join our community 🤝</h2>
