--- a/home/index.html
+++ b/home/index.html
@@ -279,9 +279,9 @@ createCanvas(400, 400);
 			</md>
 			<md id="md10-5">
 				<h2 id="webgpu-🚀">WebGPU 🚀</h2>
-				<p>We're working on a next-gen version of q5 that uses <a
+				<p>We're working on next-gen rendering modules for q5 that use <a
 						href="https://developer.mozilla.org/en-US/docs/Web/API/WebGPU_API" target="_blank">WebGPU</a> for blazing
-					fast rendering. Stay tuned! 🏎️</p>
+					fast drawing. Stay tuned! 🏎️</p>
 			</md>
 		</div>
 	</div>
@@ -315,8 +315,8 @@ createCanvas(400, 400);
 					in donations</a>.</p>
 			<p>Despite taking exorbitant salaries, the foundation's executives are too <a
 					href="https://www.linkedin.com/in/edsaber/" target="_blank">busy working other full-time jobs</a> to focus on
-				p5. They think just because p5 is open source, volunteer contributors should do all the real work. Yet it still
-				takes months for staff to simply review and publish updates. 🕵️</p>
+				p5's development. They think just because p5 is open source, volunteer contributors should do all the real work.
+				Yet it still takes months for management to simply review and publish updates. 🕵️</p>
 			<p>When criticized, TPF staff play the victim, gaslight, silence dissent, and badmouth former contributors,
 				regardless of how much time and effort they've donated to TPF projects. This behavior is inexcusable. Its
 				driving away the people who made Processing and p5 great. 🚪</p>
