--- a/home/index.html
+++ b/home/index.html
@@ -37,7 +37,7 @@
 	</div>
 	<div id="reel1" class="reel">
 		<md id="md1-0">
-			<h2 id="the-sequel-to-p5js-is-here-🎉">The sequel to p5.js is here! 🎉</h2>
+			<h2 id="the-unsanctioned-sequel-to-p5js-🎉">The unsanctioned sequel to p5.js! 🎉</h2>
 			<p>q5.js is a new implementation of the <a href="https://p5js.org" target="_blank">p5</a> API that's performance
 				optimized and packed with additional features to make creative coding even more fun and accessible.</p>
 			<p>q5 works out of the box with your existing p5 2D sketches. It even supports popular libraries like <a
@@ -140,8 +140,8 @@ function windowResized() {
 			</script>
 				<md id="md2-2">
 					<p>q5 empowers artists with a <a
-							href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#new-features-hdr-color-support"
-							target="_blank">wider range of colors</a> 🤩</p>
+							href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#hdr-color-support" target="_blank">wider
+							range of colors</a> 🤩</p>
 				</md>
 			</div>
 		</div>
