--- a/home/index.html
+++ b/home/index.html
@@ -313,13 +313,16 @@ createCanvas(400, 400);
 			<p>In October 2023, The Processing Foundation's co-founder, Ben Fry, resigned and publicly criticized management
 				for <a href="https://x.com/ben_fry/status/1709400641456501020" target="_blank">squandering millions of dollars
 					in donations</a>.</p>
-			<p>Despite taking exorbitant salaries, the foundation's executives are too <a
-					href="https://www.linkedin.com/in/edsaber/" target="_blank">busy working other full-time jobs</a> to focus on
-				p5's development. They think just because p5 is open source, volunteer contributors should do all the real work.
-				Yet it still takes months for management to simply review and publish updates. 🕵️</p>
-			<p>When criticized, TPF staff play the victim, gaslight, silence dissent, and badmouth former contributors,
-				regardless of how much time and effort they've donated to TPF projects. This behavior is inexcusable. Its
-				driving away the people who made Processing and p5 great. 🚪</p>
+			<p>Hi I'm Quinton Ashley, creator of p5play v3 and one of the developers of q5.</p>
+			<p>Sadly based on my personal experience, I agree with Ben. My contributions to p5.js, simple bug fixes, all took
+				over 5 months to be released. That's unacceptable given how well funded TPF is. The problem is that management
+				takes exorbitant salaries, 76% of the <a href="https://processingfoundation.report/" target="_blank">annual
+					budget</a>, yet many of them still work <a href="https://www.linkedin.com/in/edsaber/" target="_blank">other
+					full time jobs</a>. They seem to expect that just because p5.js is open source that volunteers will do most of
+				the dev work. 🕵️</p>
+			<p>When criticized, TPF staff play the victim, silence dissent, and badmouth former contributors, regardless of
+				how much time and effort they've donated to TPF projects. This behavior is inexcusable. Its driving away the
+				people who made Processing and p5 great. 🚪</p>
 			<p>The q5 team is not "anti-p5". We aim to carry on Processing's legacy by continuing to make creative coding fun
 				and accessible. 🌸</p>
 			<p>Creative coders deserve better: let's make it happen together! q5 is open source under the <a
