--- a/home/index.html
+++ b/home/index.html
@@ -307,10 +307,20 @@ createCanvas(400, 400);
 					target="_blank">Project Planning Board</a>.</p>
 		</md>
 	</div>
+	<div id="reel20" class="reel">
+		<md id="md20-0">
+			<h2 id="credits-🌟">Credits 🌟</h2>
+			<p>The original q5xjs (v0) was created by <a href="https://github.com/LingDong-/q5xjs"
+					target="_blank">@LingDong~</a> under the open source MIT license. We were inspired by his brilliant work to
+				fork and continue the project!</p>
+			<p>q5.js v2 is open source under the LGPL, created by the q5 team: <a href="https://github.com/quinton-ashley"
+					target="_blank">@quinton-ashley</a>, <a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>, and <a
+					href="https://github.com/LingDong-/q5xjs" target="_blank">@LingDong~</a>.</p>
+		</md>
+	</div>
 	<footer>
 		<md id="md100">
-			<p>Created by the q5 team: <a href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a> and <a
-					href="https://github.com/Tezumie" target="_blank">@Tezumie</a>. Copyright 2024. 🌟</p>
+			<p>q5js.org was created by the q5 team. Copyright 2024. 🌟</p>
 		</md>
 	</footer>
 
