--- a/home/index.html
+++ b/home/index.html
@@ -310,12 +310,17 @@ createCanvas(400, 400);
 	<div id="reel20" class="reel">
 		<md id="md20-0">
 			<h2 id="credits-🌟">Credits 🌟</h2>
-			<p>The original q5xjs (v0) was created by <a href="https://github.com/LingDong-/q5xjs"
-					target="_blank">@LingDong~</a> under the open source MIT license. We were inspired by his brilliant work to
-				fork and continue the project!</p>
+			<p>This project aims to be the spiritual successor to the invaluable work done by <a href="https://benfry.com"
+					target="_blank">Ben Fry</a> and <a href="https://x.com/REAS" target="_blank">Casey Reas</a> on Java <a
+					href="https://processingfoundation.org/" target="_blank">Processing</a> and <a
+					href="http://lauren-mccarthy.com" target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org"
+					target="_blank">p5.js</a>.</p>
+			<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a
+					href="https://github.com/LingDong-" target="_blank">@LingDong~</a> under the open source MIT license. We
+				forked and extended his brilliant work to continue the project!</p>
 			<p>q5.js v2 is open source under the LGPL, created by the q5 team: <a href="https://github.com/quinton-ashley"
 					target="_blank">@quinton-ashley</a>, <a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>, and <a
-					href="https://github.com/LingDong-/q5xjs" target="_blank">@LingDong~</a>.</p>
+					href="https://github.com/LingDong-" target="_blank">@LingDong~</a>.</p>
 		</md>
 	</div>
 	<footer>
