--- a/home/index.html
+++ b/home/index.html
@@ -316,16 +316,16 @@ createCanvas(400, 400);
 					href="http://lauren-mccarthy.com" target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org"
 					target="_blank">p5.js</a>.</p>
 			<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a
-					href="https://github.com/LingDong-" target="_blank">@LingDong~</a> under the open source MIT license. We
-				forked and extended his brilliant work to continue the project!</p>
-			<p>q5.js v2 is open source under the LGPL, created by the q5 team: <a href="https://github.com/quinton-ashley"
-					target="_blank">@quinton-ashley</a>, <a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>, and <a
-					href="https://github.com/LingDong-" target="_blank">@LingDong~</a>.</p>
+					href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain
+				Unlicense license. We forked and extended his brilliant codebase!</p>
+			<p>q5.js v2 is open source under the LGPLv3, created and actively maintained by the q5 team: <a
+					href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a> and <a
+					href="https://github.com/Tezumie" target="_blank">@Tezumie</a>.</p>
 		</md>
 	</div>
 	<footer>
 		<md id="md100">
-			<p>q5js.org was created by the q5 team. Copyright 2024. 🌟</p>
+			<p>q5js.org was created by the q5 team. Copyright 2024.</p>
 		</md>
 	</footer>
 
@@ -425,6 +425,9 @@ createCanvas(400, 400);
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ext-beautify.js"></script>
 	<script src="main.js"></script>
 	<script src="/home/mie.js"></script>
+
+
+
 </body>
 
 </html>
