--- a/home/index.html
+++ b/home/index.html
@@ -153,9 +153,9 @@ function windowResized() {
 }
 			</script>
 				<md id="md2-2">
-					<p>q5 empowers artists with a <a
-							href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#hdr-color-support" target="_blank">wider
-							range of colors</a> 🤩</p>
+					<p>q5 empowers artists with <a
+							href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#hdr-color-support" target="_blank">HDR
+							color support</a> 🤩</p>
 				</md>
 			</div>
 		</div>
@@ -269,7 +269,7 @@ createCanvas(400, 400);
 				<h2 id="sound-on-🔊">Sound On 🔊</h2>
 				<p><a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> is a great library but
 					typical use doesn't require its extensive sound generation and filtering features. 🎛️</p>
-				<p>That's why q5.js includes sound loading, playback, and basic mixing by default. 🎚️</p>
+				<p>That's why q5.js includes sounds loading, playback, and basic mixing by default. 🎚️</p>
 			</md>
 			<md id="md10-2">
 				<h2 id="lightweight-🪶">Lightweight 🪶</h2>
@@ -326,9 +326,9 @@ createCanvas(400, 400);
 			<h2 id="credits-🌟">Credits 🌟</h2>
 			<p>This project aims to be the spiritual successor to the invaluable work done by <a href="https://benfry.com"
 					target="_blank">Ben Fry</a> and <a href="https://x.com/REAS" target="_blank">Casey Reas</a> on Java <a
-					href="https://processingfoundation.org/" target="_blank">Processing</a> and <a
-					href="http://lauren-mccarthy.com" target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org"
-					target="_blank">p5.js</a>.</p>
+					href="https://processingfoundation.org/" target="_blank">Processing</a>, <a href="http://lauren-mccarthy.com"
+					target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org" target="_blank">p5.js</a>, and all
+				contributors to these projects.</p>
 			<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a
 					href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain
 				Unlicense license. We forked and significantly extended his brilliant codebase!</p>
