--- a/dev/index.html
+++ b/dev/index.html
@@ -19,6 +19,7 @@
 <body>
 	<main></main>
 	<script src="/src/q5-core.js"></script>
+	<script src="/src/q5-canvas.js"></script>
 	<script src="/src/q5-2d-canvas.js"></script>
 	<script src="/src/q5-2d-drawing.js"></script>
 	<script src="/src/q5-2d-image.js"></script>
@@ -32,11 +33,18 @@
 	<script src="/src/q5-util.js"></script>
 	<script src="/src/q5-vector.js"></script>
 
+	<script src="/src/q5-webgpu-canvas.js"></script>
+	<script src="/src/q5-webgpu-drawing.js"></script>
+	<script src="/src/q5-webgpu-image.js"></script>
+	<script src="/src/q5-webgpu-text.js"></script>
+
 	<!-- <script src="/src/q5-dom.js"></script> -->
-	<script src="/src/q5-noisier.js"></script>
+	<!-- <script src="/src/q5-2d-soft-filters.js"></script> -->
+	<!-- <script src="/src/q5-noisier.js"></script> -->
 	<!-- <script src="/src/q5-sensors.js"></script> -->
 
-	<script src="test.js"></script>
+	<!-- <script src="test.js"></script> -->
+	<script type="module" src="test.js"></script>
 </body>
 
 </html>
