--- a/home/index.html
+++ b/home/index.html
@@ -281,8 +281,7 @@ createCanvas(400, 400);
 				<p>For extremely lightweight use, load only the features you need from q5's <a
 						href="https://github.com/q5js/q5.js/tree/main/src" target="_blank">source folder</a>. 📦</p>
 				<pre><code class="language-html">&lt;script src="https://q5js.org/src/q5-core.js"&gt;
-&lt;script src="https://q5js.org/src/q5-2d-canvas.js"&gt;
-&lt;script src="https://q5js.org/src/q5-2d-drawing.js"&gt;
+&lt;script src="https://q5js.org/src/q5-input.js"&gt;
 </code></pre>
 			</md>
 			<md id="md10-4">
