--- a/dev/index.html
+++ b/dev/index.html
@@ -43,8 +43,7 @@
 	<!-- <script src="/src/q5-noisier.js"></script> -->
 	<!-- <script src="/src/q5-sensors.js"></script> -->
 
-	<!-- <script src="test.js"></script> -->
-	<script type="module" src="test.js"></script>
+	<script src="test.js"></script>
 </body>
 
 </html>
