--- a/home/index.html
+++ b/home/index.html
@@ -283,12 +283,12 @@ createCanvas(400, 400);
 				<h2 id="sound-on-🔊">Sound On 🔊</h2>
 				<p><a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> is a great library but
 					typical use doesn't require its extensive sound generation and filtering features. 🎛️</p>
-				<p>That's why q5.js includes sounds loading, playback, and basic mixing by default. 🎚️</p>
+				<p>q5.js includes sound loading, playback, and basic mixing by default. 🎚️</p>
 			</md>
 			<md id="md10-2">
 				<h2 id="lightweight-🪶">Lightweight 🪶</h2>
 				<p>p5.js and p5.sound.js have a combined size of 5.6MB! ⚠️</p>
-				<p>q5.js is only 74kb, that's 70x smaller. 🌳</p>
+				<p>q5.js is only 84kb, that's 98% smaller. 🌳</p>
 			</md>
 			<md id="md10-3">
 				<h2 id="modular-🧩">Modular 🧩</h2>
@@ -307,10 +307,13 @@ createCanvas(400, 400);
 			<md id="md10-5">
 				<h2 id="webgpu-🚀">WebGPU 🚀</h2>
 				<p>We're working on <a href="https://github.com/q5js/q5.js/tree/main/src#webgpu-canvas"
-						target="_blank">q5-webgpu rendering modules</a> for blazing fast drawing. Try out the dev build today! 🏎️
-				</p>
-				<pre><code class="language-html">&lt;script src="https://q5js.org/q5-webgpu.js"&gt;
-</code></pre>
+						target="_blank">q5-webgpu rendering modules</a> for blazing fast drawing, up to <a
+						href="https://github.com/q5js/q5.js/wiki/Developer-Log#q5js-webgpu-is-16x-faster-than-p5js-webgl--july-25-2024"
+						target="_blank">16x faster</a> than p5! 🏎️</p>
+				<p>Check out the <a href="https://aijs.io/editor?user=quinton-ashley&amp;project=rainbowLoops"
+						target="_blank">rainbow loops</a> and <a
+						href="https://aijs.io/editor?user=quinton-ashley&amp;project=q5-webgpu_transformations"
+						target="_blank">butterfly</a> demos. 🌈</p>
 			</md>
 		</div>
 	</div>
@@ -445,9 +448,6 @@ createCanvas(400, 400);
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ext-beautify.js"></script>
 	<script src="main.js"></script>
 	<script src="/home/mie.js"></script>
-
-
-
 </body>
 
 </html>
